Add authorization middleware
